--- a/app/views/punchcards/_form.html.haml
+++ b/app/views/punchcards/_form.html.haml
@@ -16,7 +16,7 @@
                 
             .form-group
                 = f.label :icon
-                = f.text_field, class: 'form-control input-sm'
+                = f.text_field :icon, class: 'form-control input-sm'
                 
             .form-group
                 = f.submit ( f.object.new_record? ? "Add Punchcard" : "Save Changes"), class: 'btn btn-success'
