--- a/app/views/punchcards/_form.html.haml
+++ b/app/views/punchcards/_form.html.haml
@@ -20,4 +20,4 @@
                 
             .form-group
                 = f.submit ( f.object.new_record? ? "Add Punchcard" : "Save Changes"), class: 'btn btn-success'
-                = link_to 'Cancel', albums_path, class: 'btn btn-default'
+                = link_to 'Cancel', punchcards_path, class: 'btn btn-default'
