Change layouts app icon

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,7 @@
             %span.icon-bar
             %span.icon-bar
         = link_to root_path, class: 'navbar-brand' do
-            %span.fa.fa-cloud-upload
+            %span.fa.fa-calendar
             %strong PunchCard
     
     / Collect the nav links, forms, and other content for toggling
