--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -12,6 +12,10 @@
         = f.date_select :date, class: 'form-control'
     
     .form-group
+        = f.label :hours
+        = f.number_field :hours, min: 1, :value => @record.hours, class: 'form-control'
+    
+    .form-group
         = f.label :description
         = f.text_area :description, rows: 4, class: 'form-control'
         
