--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -40,6 +40,7 @@
                             label: {
                                 position: "top"
                             },
+                            legend: [1, 3, 5],
                             onClick: function(date, nb) {
                                 $("#record_area").html("<h4>" + date + "</h4>");
                             }
