--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -2,16 +2,22 @@
     .col-md-12
         %h3
             = @card.name
-            .pull-right
-                = link_to new_punchcard_record_path(@card), class: 'btn btn-default btn-xs' do
+            .btn-group.pull-right
+                = link_to new_punchcard_record_path(@card), class: 'btn btn-sm btn-default' do
                     %i.fa.fa-calendar-check-o
                     Punch
+                    
+                = link_to [:edit, @card], class: 'btn btn-sm btn-default' do
+                    %i.fa.fa-pencil
+                    
+                = link_to punchcard_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' do
+                    %i.fa.fa-trash
 
         %p.text-center= @card.description
 
         // INSERT CAL HEAT MAP
         .row
-            .col-md-6.text-center
+            .col-md-6.col-md-offset-1
                 #cal-heatmap{ "data-id" => "#{@card.id}" }
                     :javascript
                         /* Get the corresponding Punchcard ID */
@@ -28,7 +34,7 @@
                             maxDate: new Date(),
                             domain: "month",
                             subDomain: "day",
-                            itemName: ["item", "hours"],
+                            itemName: ["hour", "hours"],
                             cellSize: 12,
                             range: 7,
                             rowLimit: 7,
@@ -40,13 +46,28 @@
                             label: {
                                 position: "top"
                             },
-                            legend: [1, 3, 5],
-                            onClick: function(date, nb) {
-                                $("#record_area").html("<h4>" + date + "</h4>");
-                            }
+                            legend: [1, 3, 5]
                             
                         });
                         
         %hr
         
         #record_area
+            %h4 Latest Records
+            
+            - @card.records.each do |record|
+                %h5
+                    = link_to record.date.strftime("%A %B %d %Y"), [:edit, @card, record]
+                    %small
+                        (
+                        = record.hours
+                        %i.fa.fa-clock-o
+                        )
+                    
+                    .pull-right
+                        = link_to [@card, record], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' do
+                            %i.fa.fa-trash
+                    
+                %p= record.description
+                
+                %hr
