Fix footer copyright

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -15,7 +15,7 @@
                 = link_to 'Contact', root_path
             
             %p
-                Justix &copy; 2015
+                PunchCard &copy; 2016
         
             %p
                 %a{:href => "#"}
