Change app name to Hourglass, change icons and favicon

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,8 +9,8 @@
             %span.icon-bar
             %span.icon-bar
         = link_to root_path, class: 'navbar-brand' do
-            %span.fa.fa-calendar
-            %strong PunchCard
+            %span.fa.fa-hourglass-end
+            %strong Hourglass
     
     / Collect the nav links, forms, and other content for toggling
     .collapse.navbar-collapse.navbar-ex1-collapse
