--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -17,6 +17,11 @@
     
     .form-group
         = f.label :description
+        %br
+        %p.small
+            %a{ href: 'https://guides.github.com/features/mastering-markdown/', target: '_blank'} 
+                %i.fa.fa-font
+                Styling with Markdown is supported
         = f.text_area :description, rows: 4, class: 'form-control'
         
     .form-group
