Fix simple format in show view

--- a/app/views/records/show.html.haml
+++ b/app/views/records/show.html.haml
@@ -8,7 +8,7 @@
         %i.fa.fa-clock-o
         )
                         
-= markdown(@record.description)
+= simple_format h markdown(record.description)
 
 %hr
 
