Remove icon presence validation

--- a/app/views/punchcards/_form.html.haml
+++ b/app/views/punchcards/_form.html.haml
@@ -13,11 +13,16 @@
             .form-group
                 = f.label :description
                 = f.text_field :description, class: 'form-control input-sm'
-                
+            
             .form-group
                 = f.label :icon
-                = f.text_field :icon, class: 'form-control input-sm'
-                %a{ href: 'https://fortawesome.github.io/Font-Awesome/icons/', target: '_blank' } Browse Icons
+                %br
+                %p.small
+                    %a{ href: 'https://fortawesome.github.io/Font-Awesome/icons/', target: '_blank' } 
+                        %i.fa.fa-eye
+                        Browse Icons
+                = f.text_field :icon, class: 'form-control input-sm', placeholder: "Example: 'music'"
+                
                 
             .form-group
                 = f.submit ( f.object.new_record? ? "Add Punchcard" : "Save Changes"), class: 'btn btn-success'
