--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -14,7 +14,7 @@
             %em
                 (
                 =@minimum_password_length
-                caracteres minimum)
+                characters minimum)
         %br
         = f.password_field :password, autocomplete: "off", class: 'form-control'
         
