Replace font awesome icons with image icons

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,7 @@
             %span.icon-bar
             %span.icon-bar
         = link_to root_path, class: 'navbar-brand' do
-            %span.fa.fa-hourglass-end
+            /= image_tag 'hourglass_icon24.png'
             %strong Hourglass
     
     / Collect the nav links, forms, and other content for toggling
