--- a/app/assets/stylesheets/punchcards.scss
+++ b/app/assets/stylesheets/punchcards.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the punchcards controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.cal-footer {
+    margin-top: 15px;
+    border-top: 1px solid rgb(238, 238, 238);
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+
+.cal-footer-column {
+    border-right: 1px solid rgb(238, 238, 238);
+}
