Add nil class validation for new punchcards

--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -56,34 +56,36 @@
                         // STATS
                         .row.cal-footer
                             .col-md-6.cal-footer-column
-                                .text-center
-                                    %h5
-                                        %small Total hours
-                                    
-                                    %big.lead
-                                        = @card.total_hours
-                                        hours
+                                - unless @card.records.first.nil?
+                                    .text-center
+                                        %h5
+                                            %small Total hours
                                         
-                                    %h5
-                                        %small
-                                            = @card.records.first.created_at.strftime("%B %d %Y")
-                                            –
-                                            = Time.current.strftime("%B %d %Y")
+                                        %big.lead
+                                            = @card.total_hours
+                                            hours
+                                            
+                                        %h5
+                                            %small
+                                                = @card.records.first.created_at.strftime("%B %d %Y")
+                                                –
+                                                = Time.current.strftime("%B %d %Y")
                                     
                             .col-md-6
-                                .text-center
-                                    %h5
-                                        %small Total Entries
-                                    
-                                    %big.lead
-                                        = @card.records.count
-                                        entries
+                                - unless @card.records.first.nil?
+                                    .text-center
+                                        %h5
+                                            %small Total Entries
                                         
-                                    %h5
-                                        %small
-                                            = @card.records.first.created_at.strftime("%B %d %Y")
-                                            –
-                                            = Time.current.strftime("%B %d %Y")
+                                        %big.lead
+                                            = @card.records.count
+                                            entries
+                                            
+                                        %h5
+                                            %small
+                                                = @card.records.first.created_at.strftime("%B %d %Y")
+                                                –
+                                                = Time.current.strftime("%B %d %Y")
                         
         %hr
         
