Highlight current date in calendar

--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -42,6 +42,7 @@
                                             cellSize: 12,
                                             range: 7,
                                             rowLimit: 7,
+                                            highlight: "now",
                                             legendVerticalPosition: "bottom",
                                             legendHorizontalPosition: "right",
                                             tooltip: true,
