Add record searching and pagination

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,4 +40,4 @@
                         = yield
         
                 // FOOTER
-                = render 'layouts/footer'
+                /= render 'layouts/footer'
