--- a/app/views/records/new.html.haml
+++ b/app/views/records/new.html.haml
@@ -1,5 +1,6 @@
-%h3 
-    %i.fa.fa-calendar-check-o
-    Punch new Record
+.page-header
+    %h3 
+        %i.fa.fa-calendar-check-o
+        Punch New Record
     
 = render 'form'
