Add datetime picker

--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -105,7 +105,7 @@
                     %li.list-group-item
                         %h4.list-group-item-heading
                             = link_to record.date.strftime("%A %B %d %Y"), [@card, record]
-                            %small
+                            %span.badge
                                 %i.fa.fa-clock-o
                                 = record.hours
                                 
