--- a/app/views/punchcards/_punchcard.html.haml
+++ b/app/views/punchcards/_punchcard.html.haml
@@ -52,7 +52,27 @@
                                             label: {
                                                 position: "top"
                                             },
-                                            legend: [1, 3, 5]
+                                            legend: [1, 3, 5],
+                                            
+                                            onClick: function(date, nb) {
+                                        		// Parse the date for ActiveRecord
+                                        		date = moment(date).format('YYYY-MM-DD HH:mm:ss');
+
+                                        		/* Make an AJAX Call to retrieve the ActiveRecord Record object
+                                        		   associated with the date of the cell */
+                                        		   
+                                        		if ( nb != null ) {
+                                        		    $.ajax({
+                                                        url: '/search_record',
+                                                        data: {search: date},
+                                                        dataType: 'json'
+                                                    }).done(function (data) {
+                                                        // Redirect to the obtained record show view
+                                                        var record_id = data
+                                                        window.location.href = Routes.punchcard_record_path(punchcard_id, record_id)
+                                                    });
+                                        		}
+                                        	}
                                         });
                         
                         // STATS
