--- a/app/views/records/show.html.haml
+++ b/app/views/records/show.html.haml
@@ -3,13 +3,27 @@
         %span= emojify @record.punchcard.icon
         = @record.punchcard.name
 
-%h4
+%h3.text-center
     = @record.date.strftime("%A %B %d %Y")
+    %br
     %small
         %i.fa.fa-clock-o
         = @record.hours
+
+
+.row
+    .col-md-12
+        = simple_format h markdown(@record.description)
         
-= simple_format h markdown(@record.description)
+        / PAGING
+        %ul.pager
+            - if !@record.previous.blank?
+                %li.pull-left 
+                    = link_to '←', [@record.punchcard, @record.previous]
+            
+            - if !@record.next.blank?
+                %li.pull-right
+                    = link_to '→', [@record.punchcard, @record.next]
 
 .text-center
     %ul.list-inline
