--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  */
 
 @import 'bootstrap-datetimepicker';
+@import "bootstrap-wysihtml5/bootstrap3-wysihtml5";
 
 .vertical-center {
   min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
