--- a/app/views/records/_form.html.haml
+++ b/app/views/records/_form.html.haml
@@ -18,7 +18,7 @@
     
     .form-group
         = f.label :description
-        = f.text_area :description, rows: 10, style: "resize: vertical;", class: 'form-control wysihtml5', placeholder: 'Enter record description here...'
+        = f.text_area :description, autofocus: true, rows: 10, style: "resize: vertical;", class: 'form-control wysihtml5', placeholder: 'Enter record description here...'
         
     .form-group
         = f.submit ( f.object.new_record? ? "Punch Record" : "Save Changes"), class: 'btn btn-success'
