--- a/app/views/punchcards/index.html.haml
+++ b/app/views/punchcards/index.html.haml
@@ -2,7 +2,7 @@
   .col-md-4
     .panel.panel-default
       .panel-heading
-        %b My Punchcards
+        %strong My Punchcards
 
         .pull-right
           = link_to new_punchcard_path, class: 'btn btn-xs btn-success' do
